# ARKV

./: .gitignore  LICENSE  README.md  TEST_SUITE_SUMMARY.md  environment.yml  pyproject.toml  run_tests.sh  setup.py  setup.sh
akcb/: calculator.py
akcb/cache/: adaptive_cache.py  mix_cache.py  origin_cache.py  quant_cache.py  window_cache.py
akcb/model/: modify_qwen3.py  modle_llama.py
arkv/: config.py
arkv/cache/: adaptive_cache.py  mix_cache.py  origin_cache.py  quant_cache.py  window_cache.py
arkv/model/: modify_qwen3.py  modle_llama.py
experiments/LongBench/: pred.py
experiments/LongBench/config/: model2hypers.json
experiments/analysis/: gsm8k_analysis.ipynb  longbench_analysis.ipynb  memory_analysis.ipynb  tps_analysis.ipynb
experiments/analysis/data/: eval_perf.csv  longbench_perf.csv  quant_ratio_perf.csv  tps_aggregated.csv
experiments/eval/: eval.py  train.py
experiments/eval/config/: hypers_all.json  hypers_full.json  hypers_instruct_models.json  hypers_test.json
experiments/lmeval/: eval.py
experiments/lmeval/config/: hypers.json
experiments/longbench/: eval.py  pred.py
experiments/longbench/config/: model2maxlen.json  model2path.json
scripts/: setup_env.sh
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_experiments.py
tests/unit/: __init__.py  test_cache.py  test_calculator.py
