[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akcb"
version = "0.1.0"
description = "Adaptive KV Caches under Budget - Lightweight mixed-precision KV cache management for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jianlong Lei", email = "jle385@aucklanduni.ac.nz"}
]
keywords = ["llm", "kv-cache", "inference", "optimization", "transformer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "tokenizers>=0.14.0",
    "tqdm",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval>=0.4.0",
    "rouge>=1.0.1",
    "jieba>=0.42.1",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
]
flash = [
    "flash-attn>=2.3.0",
]
quant = [
    "bitsandbytes>=0.41.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
all = [
    "akcb[eval,flash,quant,dev]",
]

[project.urls]
Homepage = "https://github.com/JianlongLei/AKCB"
Repository = "https://github.com/JianlongLei/AKCB"
Documentation = "https://github.com/JianlongLei/AKCB#readme"
Issues = "https://github.com/JianlongLei/AKCB/issues"

[tool.setuptools]
packages = ["akcb", "akcb.cache", "akcb.model"]

[tool.setuptools.package-data]
akcb = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["akcb"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
